# ClusteringPairs

./: .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt  run_app.bat
